Compilation options and documentation.

--- a/learn/wasm_hello_world_c_makefile_Dynamic_Linking/Makefile
+++ b/learn/wasm_hello_world_c_makefile_Dynamic_Linking/Makefile
@@ -2,13 +2,19 @@
 IDIR =./include
 CC=emcc
 CFLAGS=-I$(IDIR)
+CFLAGS+= -g
+CFLAGS+= -sLLD_REPORT_UNDEFINED #to get more information on undefined symbols
+CFLAGS+= -sERROR_ON_UNDEFINED_SYMBOLS=0 #To disable errors for undefined symbols
+
+#-sSIDE_MODULE=1/-sMAIN_MODULE=1 All the code compiled remains in the output, including all system libraries linked in, and also all the JS library code
+#-sSIDE_MODULE=2/-sMAIN_MODULE=2 Normal dead code elimination
 
 ODIR=obj
 LDIR =./lib
 
 
 singlehello.js: hellofunc.wasm src/hellomake.c
-	$(CC) $^ -s MAIN_MODULE=1 -o $@ $(CFLAGS)
+	$(CC) $^ -s MAIN_MODULE=2 -o $@ $(CFLAGS)
 
 hellofunc.wasm: src/hellofunc.c
 	$(CC) $< -s SIDE_MODULE=1 -o $@ $(CFLAGS)
